final changes posible

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,12 @@ spring.datasource.username=root
 spring.datasource.password=fence0gras
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
+
+
+spring.data.mongodb.uri= mongodb://localhost:27017/springboot_chat
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=debug
 
 #Location
 spring.jackson.time-zone=America/Bogota
